<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    app:contentPadding="4dp"
    app:cardPreventCornerOverlap="false"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iconInstIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_edu_institute"/>
            <TextView
                android:id="@+id/nameInstTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/institute_name"
                android:textSize="16dp"
                android:layout_toRightOf="@+id/iconInstIV"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/iconInstIV"
                android:textColor="#000"/>

            <ImageView
                android:id="@+id/iconEditInstIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/icon_edit_institution" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameInstTV"
                android:layout_alignLeft="@id/nameInstTV"
                android:layout_alignStart="@id/nameInstTV"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fieldOfStudyTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_of_study"/>
                <TextView
                    android:id="@+id/degreeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degree"/>

                <TextView
                    android:id="@+id/gradeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade"/>
                <TextView
                    android:id="@+id/passYearTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passing_year"/>

            </LinearLayout>
        </RelativeLayout>



    </LinearLayout>



</android.support.v7.widget.CardView>

